maze.shortestpath.ShortestPathMaze.scala.error
Compilation error:
ShortestPathMaze:6: error: not found: value heigth
    for(j <- 0 to heigth-1) {
                  ^ShortestPathMaze:7: error: not found: value getBaggle
      if(getBaggle(i,j)) {
         ^