maze.shortestpath.ShortestPathMaze.scala.code
override def run() {
  var height:Int=getWorldHeight()
  var width:Int=getWorldWidth()
  for (i <- 0 to width-1) {
    for(j <- 0 to heigth-1) {
      if(getBaggle(i,j)) {
        setIndication(i,j,0);
        var baggleHeight:Int=j;
        var baggleWight:Int=i;
      }
    }
  }
  
}